--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "data-rest",
-  "description": "Fabulous troubador that conveys the intricate meaning of your data, along the data itself, of course",
-  "main": "data-rest.html",
+  "name": "data-pipes",
+  "description": "A collection of data access components, always returning immutable data structures, along with their schema in-band",
+  "main": "data-pipes.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "iron-ajax": "PolymerElements/iron-ajax#^2.0.2"
