Adds ‹data-gql› element with basic support for querying GQL server (#2)

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "main": "data-pipes.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
-    "iron-ajax": "PolymerElements/iron-ajax#^2.0.2"
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.2",
+    "immutable": "facebook/immutable-js#^3.8.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
