--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   },
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.1.0",
-    "@polymer/iron-component-page": "^4.0.1",
-    "@polymer/test-fixture": "^4.0.2",
-    "chai": "^4.2.0",
-    "mocha": "^6.1.4",
-    "wct-mocha": "^1.0.0"
+    "@polymer/iron-component-page": "^4.0.1"
   }
 }
